--- a/dashboard.html
+++ b/dashboard.html
@@ -2,33 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dashboard – PermitBot Pro</title>
+  <title>Dashboard – PermitBot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Manage permit packets with PermitBot Pro." />
+  <script>
+    tailwind = {
+      config: {
+        theme: {
+          extend: {
+            colors: {
+              brand: {
+                teal: '#00C8D7',
+                bg: '#F7F4EC',
+                dark: '#111827'
+              }
+            }
+          }
+        }
+      }
+    }
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
-<body class="bg-slate-950 text-slate-50 antialiased">
+<body class="bg-brand-bg text-brand-dark antialiased">
   <div class="min-h-screen flex flex-col">
-    <!-- Header with logo -->
-    <header class="border-b border-slate-800 bg-slate-950/90">
+    <!-- Header -->
+    <header class="border-b border-slate-200 bg-brand-bg">
       <div class="max-w-5xl mx-auto px-4 h-16 flex items-center justify-between">
-        <a href="index.html" class="flex items-center gap-2">
-          <!-- change logo.svg to logo.png if needed -->
-          <img src="logo.svg" alt="PermitBot Pro logo" class="h-9 w-9 rounded-2xl object-contain bg-slate-900" />
-          <div class="flex flex-col leading-tight">
-            <span class="font-semibold text-sm tracking-tight">PermitBot Pro</span>
-            <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">
-              Volusia &amp; Flagler Permit Assistant
-            </span>
-          </div>
+        <a href="index.html" class="flex items-center gap-3">
+          <img src="permitbot-logo.svg" alt="PermitBot logo" class="h-10 w-auto" />
         </a>
         <div class="flex items-center gap-3 text-xs">
-          <span class="hidden sm:inline text-slate-400">Early access workspace</span>
+          <span class="hidden sm:inline text-slate-600">Volusia / Flagler early access</span>
           <button
             onclick="logout()"
-            class="rounded-full border border-slate-700 px-3 py-1.5 text-slate-200 hover:border-emerald-400/70">
+            class="rounded-full border border-slate-400 px-3 py-1.5 text-brand-dark hover:border-brand-teal">
             Log out
           </button>
         </div>
@@ -40,8 +49,9 @@
       <div class="max-w-5xl mx-auto px-4 py-8 space-y-8">
         <!-- Intro -->
         <section>
-          <h1 class="text-2xl font-semibold text-white">Dashboard</h1>
-          <p class="mt-1 text-sm text-slate-300 max-w-xl">
+          <h1 class="text-2xl font-semibold text-brand-dark">Dashboard</h1>
+          <div class="h-1 w-20 bg-brand-teal rounded-full mt-1"></div>
+          <p class="mt-2 text-sm text-slate-700 max-w-xl">
             Use this dashboard to ask AI which permits/forms and civil/site documents you likely need
             for a job in Volusia / Flagler and nearby cities. Then save the job to your account.
           </p>
@@ -49,17 +59,17 @@
 
         <!-- Ask AI section -->
         <section class="max-w-3xl space-y-3">
-          <h2 class="text-lg font-semibold text-white">Ask AI for permit suggestions</h2>
-          <p class="text-xs text-slate-300">
+          <h2 class="text-lg font-semibold text-brand-dark">Ask AI for permit suggestions</h2>
+          <p class="text-xs text-slate-700">
             Fill this out like you’re emailing your office admin or EIT. Jurisdiction and project type are required.
           </p>
 
-          <div class="space-y-2 text-sm rounded-2xl border border-slate-800 bg-slate-900/80 p-4">
+          <div class="space-y-2 text-sm rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
             <div class="grid sm:grid-cols-2 gap-3">
               <div>
-                <label class="block text-xs text-slate-200 mb-1">Jurisdiction *</label>
+                <label class="block text-xs text-slate-700 mb-1">Jurisdiction *</label>
                 <select id="ai-jurisdiction"
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100">
+                  class="w-full rounded-lg border border-slate-300 bg-white px-3 py-2 text-sm text-brand-dark">
                   <option value="">Choose jurisdiction…</option>
                   <option>Volusia County</option>
                   <option>Flagler County</option>
@@ -71,60 +81,60 @@
                 </select>
               </div>
               <div>
-                <label class="block text-xs text-slate-200 mb-1">Project type *</label>
+                <label class="block text-xs text-slate-700 mb-1">Project type *</label>
                 <input id="ai-project-type"
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
+                  class="w-full rounded-lg border border-slate-300 bg-white px-3 py-2 text-sm text-brand-dark"
                   placeholder="SFR – new build, pool, addition, TI, etc." />
               </div>
             </div>
 
             <div>
-              <label class="block text-xs text-slate-200 mb-1">Parcel or address (optional)</label>
+              <label class="block text-xs text-slate-700 mb-1">Parcel or address (optional)</label>
               <input id="ai-parcel"
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
+                class="w-full rounded-lg border border-slate-300 bg-white px-3 py-2 text-sm text-brand-dark"
                 placeholder="Parcel ID or address" />
             </div>
 
             <div>
-              <label class="block text-xs text-slate-200 mb-1">What forms do you think you need? (optional)</label>
+              <label class="block text-xs text-slate-700 mb-1">What forms do you think you need? (optional)</label>
               <textarea id="ai-forms-expected" rows="2"
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
+                class="w-full rounded-lg border border-slate-300 bg-white px-3 py-2 text-sm text-brand-dark"
                 placeholder="Building permit, utility app, FDEP potable/sewer, stormwater checklist, ROW…"></textarea>
             </div>
 
             <div>
-              <label class="block text-xs text-slate-200 mb-1">Extra context (optional)</label>
+              <label class="block text-xs text-slate-700 mb-1">Extra context (optional)</label>
               <textarea id="ai-extra" rows="3"
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
+                class="w-full rounded-lg border border-slate-300 bg-white px-3 py-2 text-sm text-brand-dark"
                 placeholder="City water/sewer or well/septic, flood zone, wetlands, corner lot, etc."></textarea>
             </div>
 
             <div class="flex flex-wrap gap-2 items-center mt-2">
               <button
                 onclick="runPermitAI()"
-                class="rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300">
+                class="rounded-full bg-brand-teal px-4 py-2 text-sm font-semibold text-brand-dark hover:bg-brand-teal/90">
                 Ask AI
               </button>
               <button
                 onclick="saveJob()"
-                class="rounded-full border border-slate-700 px-4 py-2 text-sm font-semibold text-slate-200 hover:border-emerald-400/70">
+                class="rounded-full border border-slate-400 px-4 py-2 text-sm font-semibold text-brand-dark hover:border-brand-teal">
                 Save Job
               </button>
-              <span id="save-status" class="text-[11px] text-slate-400"></span>
+              <span id="save-status" class="text-[11px] text-slate-600"></span>
             </div>
           </div>
         </section>
 
         <!-- AI Result section -->
         <section class="space-y-3">
-          <h2 class="text-sm font-semibold text-slate-200">AI Result</h2>
+          <h2 class="text-sm font-semibold text-brand-dark">AI Result</h2>
 
           <!-- Summary -->
-          <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-4">
-            <p class="text-xs text-slate-400 mb-1">Interpretation</p>
-            <p id="summary-jurisdiction" class="text-sm text-slate-100 mb-1">–</p>
-            <p id="summary-project" class="text-xs text-slate-300 mb-2">–</p>
-            <p id="summary-notes" class="text-xs text-slate-400">Run AI to see notes.</p>
+          <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
+            <p class="text-xs text-slate-600 mb-1">Interpretation</p>
+            <p id="summary-jurisdiction" class="text-sm text-brand-dark mb-1">–</p>
+            <p id="summary-project" class="text-xs text-slate-700 mb-2">–</p>
+            <p id="summary-notes" class="text-xs text-slate-600">Fill out the fields above and click “Ask AI”.</p>
           </div>
 
           <!-- Categories -->
@@ -133,17 +143,17 @@
           </div>
 
           <!-- Recommended order -->
-          <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-4">
-            <h3 class="text-xs font-semibold text-slate-200 mb-1">Suggested order of attack</h3>
-            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-300 space-y-1">
+          <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
+            <h3 class="text-xs font-semibold text-brand-dark mb-1">Suggested order of attack</h3>
+            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-700 space-y-1">
             </ol>
           </div>
         </section>
 
         <!-- Saved jobs -->
         <section class="space-y-2">
-          <h2 class="text-sm font-semibold text-slate-200">Recent jobs</h2>
-          <div id="jobs-list" class="space-y-2 text-xs text-slate-300">
+          <h2 class="text-sm font-semibold text-brand-dark">Recent jobs</h2>
+          <div id="jobs-list" class="space-y-2 text-xs text-slate-700">
             <p class="text-slate-500 text-xs">No jobs saved yet.</p>
           </div>
         </section>
@@ -151,9 +161,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="border-t border-slate-800">
-      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-500">
-        <span>© <span id="year"></span> PermitBot Pro.</span>
+    <footer class="border-t border-slate-200 bg-brand-bg">
+      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-600">
+        <span>© <span id="year"></span> PermitBot.</span>
         <span>Volusia / Flagler early access.</span>
       </div>
     </footer>
@@ -162,7 +172,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Supabase config (same as login/signup)
     const SUPABASE_URL = "https://cwsktitrhphppjltnquj.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN3c2t0aXRyaHBocHBqbHRucXVqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM0MTM4OTMsImV4cCI6MjA3ODk4OTg5M30.4eMRLpadUbS_FEyBH8bsYqsBGX65kUI16WXKAfFXfus";
 
@@ -175,7 +184,7 @@
       if (!session) {
         window.location.href = "login.html";
       } else {
-        loadJobs(); // load jobs once we know who the user is
+        loadJobs();
       }
     }
 
@@ -184,7 +193,6 @@
       window.location.href = "login.html";
     }
 
-    // Call on load
     requireAuth();
 
     // Run AI
@@ -261,10 +269,10 @@
         if (!Array.isArray(items) || items.length === 0) return;
 
         const card = document.createElement("div");
-        card.className = "rounded-2xl border border-slate-800 bg-slate-900/80 p-3";
+        card.className = "rounded-2xl border border-slate-200 bg-white p-3 shadow-sm";
 
         const title = document.createElement("h3");
-        title.className = "text-xs font-semibold text-slate-200 mb-2";
+        title.className = "text-xs font-semibold text-brand-dark mb-2";
         title.textContent = CATEGORY_LABELS[key];
         card.appendChild(title);
 
@@ -273,11 +281,11 @@
 
         items.forEach(item => {
           const li = document.createElement("li");
-          li.className = "text-[11px] text-slate-300";
+          li.className = "text-[11px] text-slate-700";
           li.innerHTML = `
-            <span class="font-semibold text-slate-100">${item.name || "Unnamed item"}</span>
+            <span class="font-semibold text-brand-dark">${item.name || "Unnamed item"}</span>
             <span class="text-slate-500"> (${item.jurisdiction || "Local"})</span><br/>
-            <span class="text-slate-400">${item.description || ""}</span><br/>
+            <span class="text-slate-600">${item.description || ""}</span><br/>
             <span class="text-slate-500">Required if: ${item.required_if || "Typically required"}</span>
           `;
           list.appendChild(li);
@@ -295,7 +303,7 @@
       });
     }
 
-    // Save job to Supabase
+    // Save job
     async function saveJob() {
       const statusEl = document.getElementById("save-status");
       statusEl.textContent = "";
@@ -315,7 +323,6 @@
       }
 
       const userId = session.user.id;
-
       statusEl.textContent = "Saving…";
 
       const { error } = await supabaseClient
@@ -337,7 +344,7 @@
       }
     }
 
-    // Load recent jobs (this is the loadJobs you asked for)
+    // Load jobs
     async function loadJobs() {
       const listEl = document.getElementById("jobs-list");
       listEl.innerHTML = "<p class='text-xs text-slate-500'>Loading…</p>";
@@ -374,15 +381,15 @@
         const created = new Date(job.created_at);
         const a = document.createElement("a");
         a.href = `job.html?id=${job.id}`;
-        a.className = "block rounded-xl border border-slate-800 bg-slate-900/70 px-3 py-2 hover:border-emerald-400/70";
+        a.className = "block rounded-xl border border-slate-200 bg-white px-3 py-2 hover:border-brand-teal shadow-sm";
 
         a.innerHTML = `
           <div class="flex justify-between items-center">
             <div>
-              <div class="text-[11px] font-semibold text-slate-100">
+              <div class="text-[11px] font-semibold text-brand-dark">
                 ${job.project_type || "Job"}
               </div>
-              <div class="text-[11px] text-slate-400">
+              <div class="text-[11px] text-slate-600">
                 ${job.jurisdiction || ""}
               </div>
               <div class="text-[11px] text-slate-500">
