--- a/index.html
+++ b/index.html
@@ -2,34 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PermitBot Pro – AI for Permit Paperwork</title>
+  <title>PermitBot – Volusia & Flagler Permit Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="PermitBot Pro uses AI to auto-fill permit forms from a parcel number so contractors and engineers can stop wasting time on paperwork." />
+  <meta name="description" content="AI-powered permit assistant for Volusia and Flagler County civil and building workflows." />
+  <script>
+    tailwind = {
+      config: {
+        theme: {
+          extend: {
+            colors: {
+              brand: {
+                teal: '#00C8D7',
+                bg: '#F7F4EC',
+                dark: '#111827'
+              }
+            }
+          }
+        }
+      }
+    }
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-950 text-slate-50 antialiased">
+<body class="bg-brand-bg text-brand-dark antialiased">
   <div class="min-h-screen flex flex-col">
     <!-- Header -->
-    <header class="border-b border-slate-800 bg-slate-950/90">
-      <div class="max-w-4xl mx-auto px-4 h-16 flex items-center justify-between">
-        <!-- Logo / left side -->
-        <div class="flex items-center gap-2">
-          <div class="h-9 w-9 rounded-2xl bg-emerald-400 flex items-center justify-center font-bold text-slate-950 text-lg">
-            PB
-          </div>
-          <div class="flex flex-col leading-tight">
-            <span class="font-semibold text-sm tracking-tight">PermitBot Pro</span>
-            <span class="text-[11px] text-slate-400 uppercase tracking-[0.15em]">Permit Automation</span>
-          </div>
-        </div>
-
-        <!-- Right side nav -->
+    <header class="border-b border-slate-200 bg-brand-bg">
+      <div class="max-w-5xl mx-auto px-4 h-16 flex items-center justify-between">
+        <a href="index.html" class="flex items-center gap-3">
+          <img src="permitbot-logo.svg" alt="PermitBot logo" class="h-10 w-auto" />
+        </a>
         <div class="flex items-center gap-3 text-xs">
-          <a href="login.html" class="text-slate-300 hover:text-white">
+          <a href="login.html"
+             class="rounded-full border border-slate-400 px-3 py-1.5 text-brand-dark hover:border-brand-teal">
             Log in
           </a>
-          <a href="signup.html" class="rounded-full bg-emerald-400 px-3 py-1.5 font-semibold text-slate-950 hover:bg-emerald-300">
-            Create account
+          <a href="signup.html"
+             class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-brand-teal/90">
+            Get early access
           </a>
         </div>
       </div>
@@ -37,202 +47,64 @@
 
     <!-- Main -->
     <main class="flex-1">
-      <!-- Hero -->
-      <section class="border-b border-slate-800">
-        <div class="max-w-4xl mx-auto px-4 py-10 space-y-6">
-          <div class="inline-flex items-center gap-2 rounded-full border border-emerald-400/30 bg-slate-900/80 px-3 py-1 text-[11px] text-emerald-200">
-            <span class="h-1.5 w-1.5 rounded-full bg-emerald-400"></span>
-            Built for contractors & engineers
-          </div>
-
-          <div>
-            <h1 class="text-3xl sm:text-4xl font-semibold tracking-tight">
-              Stop filling out permit forms.
-              <span class="block text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 to-cyan-400">
-                Type the parcel. Let AI do the rest.
-              </span>
-            </h1>
-            <p class="mt-3 text-sm text-slate-300 max-w-xl">
-              PermitBot Pro auto-fills jurisdiction-specific permit forms using public data and AI.
-              Contractors and engineers save hours per job and get cleaner, more consistent packets.
-            </p>
-          </div>
-
-          <div class="flex flex-col sm:flex-row gap-3">
-            <a href="#waitlist" class="inline-flex justify-center items-center rounded-full bg-emerald-400 px-5 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300">
-              Get early access
-            </a>
-            <p class="text-[11px] text-slate-400 sm:self-center">
-              Starting in Florida • Expanding by demand
-            </p>
-          </div>
-
-          <!-- Simple mock box -->
-          <div class="mt-4 rounded-2xl border border-slate-800 bg-slate-900/80 p-4 text-xs">
-            <p class="text-slate-300 font-medium mb-3">Quick demo (concept)</p>
-            <div class="grid sm:grid-cols-2 gap-3">
-              <div>
-                <label class="block text-slate-300 mb-1">Parcel / Address</label>
-                <input disabled value="1234-567-890 • Palm Coast, FL"
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-[11px] text-slate-200" />
-              </div>
-              <div>
-                <label class="block text-slate-300 mb-1">Project type</label>
-                <input disabled value="SFR – New build"
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-[11px] text-slate-200" />
-              </div>
-            </div>
-            <div class="mt-3 grid sm:grid-cols-2 gap-2">
-              <div class="rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 flex justify-between">
-                <span>City building permit</span>
-                <span class="text-emerald-300 text-[10px]">Ready</span>
-              </div>
-              <div class="rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 flex justify-between">
-                <span>Utility (water / sewer)</span>
-                <span class="text-emerald-300 text-[10px]">Ready</span>
-              </div>
-              <div class="rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 flex justify-between">
-                <span>Stormwater checklist</span>
-                <span class="text-cyan-300 text-[10px]">AI drafted</span>
-              </div>
-              <div class="rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 flex justify-between">
-                <span>FDEP potable / sewer</span>
-                <span class="text-emerald-300 text-[10px]">Ready</span>
-              </div>
-            </div>
-            <div class="mt-3 flex justify-between items-center">
-              <p class="text-[11px] text-slate-400">
-                4 forms • Est. <span class="text-slate-200 font-semibold">6–10 hours</span> saved
-              </p>
-              <button
-                onclick="document.getElementById('waitlist').scrollIntoView({ behavior: 'smooth' })"
-                class="rounded-full bg-emerald-400 px-4 py-1.5 text-[11px] font-semibold text-slate-950 hover:bg-emerald-300">
-                Generate packet
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Simple bullets -->
-      <section class="border-b border-slate-800">
-        <div class="max-w-4xl mx-auto px-4 py-8 grid sm:grid-cols-3 gap-4 text-xs">
-          <div class="rounded-xl border border-slate-800 bg-slate-900/80 p-3">
-            <p class="font-semibold text-slate-100 mb-1">Jurisdiction-aware</p>
-            <p class="text-slate-300">
-              Forms match the city / county you actually work in. No more hunting PDFs.
-            </p>
-          </div>
-          <div class="rounded-xl border border-slate-800 bg-slate-900/80 p-3">
-            <p class="font-semibold text-slate-100 mb-1">Single source of truth</p>
-            <p class="text-slate-300">
-              Enter project info once. We push it into every required form in the packet.
-            </p>
-          </div>
-          <div class="rounded-xl border border-slate-800 bg-slate-900/80 p-3">
-            <p class="font-semibold text-slate-100 mb-1">You stay in control</p>
-            <p class="text-slate-300">
-              We never sign or seal. You review, seal, and submit using your normal process.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Waitlist -->
-      <section id="waitlist">
-        <div class="max-w-4xl mx-auto px-4 py-10">
-          <h2 class="text-xl font-semibold text-white mb-2">Join the early access list</h2>
-          <p class="text-sm text-slate-300 mb-4">
-            Tell us who you are and how many permits you touch in a typical month. We’ll prioritize people who can really put this to work.
+      <div class="max-w-5xl mx-auto px-4 py-12 grid gap-8 md:grid-cols-[3fr,2fr] items-center">
+        <section class="space-y-4">
+          <h1 class="text-3xl md:text-4xl font-semibold tracking-tight">
+            AI that builds your permit packet<br />
+            for Volusia &amp; Flagler jobs.
+          </h1>
+          <div class="h-1 w-24 bg-brand-teal rounded-full"></div>
+          <p class="text-sm leading-relaxed text-slate-700 max-w-xl">
+            PermitBot helps civil engineers and contractors figure out which forms, checklists,
+            stormwater docs, FDEP forms, and ROW permits they actually need for a job in
+            Volusia / Flagler and nearby cities.
           </p>
+          <ul class="text-sm text-slate-700 space-y-1">
+            <li>• Supports Volusia, Flagler, Daytona Beach, Ormond, Palm Coast, Port Orange, NSB</li>
+            <li>• Civil + building workflows: SFR, pools, additions, TIs</li>
+            <li>• Save jobs and come back later</li>
+          </ul>
+          <div class="flex flex-wrap gap-3 pt-2">
+            <a href="signup.html"
+               class="rounded-full bg-brand-teal px-5 py-2 text-sm font-semibold text-brand-dark hover:bg-brand-teal/90">
+              Create account
+            </a>
+            <a href="login.html"
+               class="rounded-full border border-slate-400 px-5 py-2 text-sm text-brand-dark hover:border-brand-teal">
+              Log in to dashboard
+            </a>
+          </div>
+        </section>
 
-          <!-- Formspree-wired form -->
-          <form
-            action="https://formspree.io/f/mqawpvld"
-            method="POST"
-            class="space-y-3 rounded-2xl border border-slate-800 bg-slate-900/80 p-4 text-sm"
-          >
-            <!-- Optional: tag to know source -->
-            <input type="hidden" name="source" value="permitbotpro-landing" />
-
-            <div class="grid sm:grid-cols-2 gap-3">
-              <div>
-                <label class="block text-xs text-slate-200 mb-1">Name</label>
-                <input
-                  type="text"
-                  name="name"
-                  placeholder="Jane Doe"
-                  required
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500"
-                />
-              </div>
-              <div>
-                <label class="block text-xs text-slate-200 mb-1">Email</label>
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="you@company.com"
-                  required
-                  class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500"
-                />
-              </div>
-            </div>
-
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Company / role</label>
-              <input
-                type="text"
-                name="company_role"
-                placeholder="GC, PM, engineer, owner..."
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100 placeholder-slate-500"
-              />
-            </div>
-
-            <div>
-              <label class="block text-xs text-slate-200 mb-1">Permits per month (rough)</label>
-              <select
-                name="permits_per_month"
-                class="w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-slate-100"
-              >
-                <option value="">Select…</option>
-                <option value="0-10">0–10</option>
-                <option value="10-30">10–30</option>
-                <option value="30-75">30–75</option>
-                <option value="75-150">75–150</option>
-                <option value="150+">150+</option>
-              </select>
-            </div>
-
-            <button
-              type="submit"
-              class="w-full rounded-full bg-emerald-400 px-4 py-2 text-sm font-semibold text-slate-950 hover:bg-emerald-300"
-            >
-              Join waitlist
-            </button>
-
-            <p class="text-[11px] text-slate-500">
-              This form sends submissions through Formspree so you can start collecting real leads immediately.
-            </p>
-          </form>
-        </div>
-      </section>
+        <section class="space-y-3">
+          <div class="rounded-2xl border border-slate-200 bg-white p-4 text-sm shadow-sm">
+            <h2 class="text-xs font-semibold text-slate-800 mb-2">What PermitBot does today</h2>
+            <ul class="text-xs text-slate-700 space-y-1">
+              <li>• Ask AI which permits/forms you need for a job</li>
+              <li>• See a structured permit packet by category</li>
+              <li>• Save jobs and view them later</li>
+              <li>• Built specifically for your local Florida jurisdictions</li>
+            </ul>
+          </div>
+          <div class="rounded-2xl border border-dashed border-brand-teal/60 bg-white/70 p-4 text-xs text-slate-700">
+            <span class="font-semibold text-slate-900">Coming soon:</span>
+            Auto-filled PDF packets and uploads for surveys, plans, and existing forms.
+          </div>
+        </section>
+      </div>
     </main>
 
     <!-- Footer -->
-    <footer class="border-t border-slate-800">
-      <div class="max-w-4xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2">
-        <p class="text-[11px] text-slate-500">
-          © <span id="year"></span> PermitBot Pro.
-        </p>
-        <p class="text-[11px] text-slate-500">
-          “TurboTax for permits” • Florida first.
-        </p>
+    <footer class="border-t border-slate-200 bg-brand-bg">
+      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-600">
+        <span>© <span id="year"></span> PermitBot.</span>
+        <span>Volusia &amp; Flagler early access.</span>
       </div>
     </footer>
   </div>
 
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
