--- a/job.html
+++ b/job.html
@@ -12,7 +12,7 @@
           extend: {
             colors: {
               brand: {
-                teal: '#00C8D7',
+                teal: '#00E5FF',   // neon cyan
                 bg: '#F7F4EC',
                 dark: '#111827'
               }
@@ -37,7 +37,7 @@
           <span class="hidden sm:inline text-slate-600">Job details</span>
           <button
             onclick="logout()"
-            class="rounded-full border border-slate-400 px-3 py-1.5 text-brand-dark hover:border-brand-teal">
+            class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-[#00B7CC]">
             Log out
           </button>
         </div>
@@ -222,3 +222,4 @@
   </script>
 </body>
 </html>
+
